Support adding artifacts to test runs (#215)
